Adios a las scrolls

--- a/popup.html
+++ b/popup.html
@@ -6,7 +6,7 @@
     <title>TL;DR.ai</title>
     <link rel="stylesheet" href="styles.css">
 </head>
-<body>
+<body style="overflow-x: hidden;">
     <div id="popup">
         <div id="language-selector">
             <select id="languageSelect">
