--- a/popup.html
+++ b/popup.html
@@ -6,13 +6,16 @@
     <title>TL;DR.ai</title>
     <link rel="stylesheet" href="styles.css">
 </head>
-<body style="overflow-x: hidden;">
+<body style="overflow: hidden;">
     <div id="popup">
-        <div id="language-selector">
-            <select id="languageSelect">
-                <option value="es">Español</option>
-                <option value="en">English</option>
-            </select>
+        <div class="top-corners">
+            <div id="language-selector">
+                <select id="languageSelect">
+                    <option value="es">Español</option>
+                    <option value="en">English</option>
+                </select>
+            </div>
+            <button id="closeButton" class="close-button">×</button>
         </div>
         <h1 data-i18n="title">TL;DR.ai</h1>
         <!-- Información del modelo actual -->
